# auto

./: .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  grad_dev_all_families.jsonl  grad_dev_fin_truth_table.jsonl  grad_dev_ring_identity.jsonl  grad_dev_set_equality.jsonl
.githooks/: pre-commit
.github/workflows/: build_lean.yml  secrets_guard.yml  tiny_eval.yml  validate_dataset.yml
dataset/: LICENSE_DATASET  dev.jsonl  pilot.jsonl  provenance_notes.md  schema.md  test.jsonl
docs/: add_item.md  families.md  local_tools.md  plan_v1.md  protocol.md  status.md  threat_model.md  v1_1_plan.md  v1_freeze.md  v1_results.md
harness/: README.md  pyproject.toml
harness/src/autoform_eval/: cache.py  cli.py  dataset.py  lean_runner.py  lean_tools.py  mutate.py  parse.py  paths.py  prompt.py  render.py  report.py  smoke_tests.py  types.py  validate.py
harness/src/autoform_eval/adapters/: __init__.py  gemini_adapter.py  openai_adapter.py
lean/: AutoformalizationEval.lean  README.md  lakefile.lean
lean/AutoformalizationEval/: Checks.lean  Version.lean
lean/AutoformalizationEval/Families/: FinTruthTable.lean  RingIdentity.lean  SetEquality.lean
lean/AutoformalizationEval/Regression/: RingIdentityV1BinderPermutationFail.lean  RingIdentityV2BinderPermutationPass.lean  RingIdentityV2RealMismatchFail.lean  SetEqualityDefEqFastPathPass.lean  SetEqualityRealMismatchFail.lean  SetEqualityShapeReject.lean  (+2 more)
results/: README.md
results/baselines/: README.md
scripts/: format_jsonl.py  run_ring_identity_regression.sh  run_set_equality_regression.sh  setup.sh
(+34 files in other folders)
